added email validation

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <b>Please enter your credentials:</b>
 
-<form onsubmit ="return verifyPassword()">
+<form onsubmit ="return verifyCredentials()">
   <label for="email">Email:</label>
   <input type="text" id="email" name="email"><br><br>
   <label for="password">Password:</label>
