--- a/index.html
+++ b/index.html
@@ -7,28 +7,28 @@
     <!-- Responsive header -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 </head>
-<body onload="onBodyLoad()">
+<body>
 
 <b>Please enter your credentials:</b>
 
-<form onsubmit ="return verifyCredentials()">
+<form>
   <label for="email">Email:</label>
-  <input type="text" id="email" name="email"><br><br>
+  <input type="text" id="email" name="email" value="aaa@aaa.com"><br><br>
   <label for="password">Password:</label>
-  <input type="text" id="password" name="password"><br><br>
-  <input type="submit" value="Login">
+  <input type="text" id="password" name="password" value="123456a"><br><br>
+  <input type="button" value="Login" onclick="verifyCredentials()">
 </form>
 <br>
 <span id = "message" style="color:red"> </span>
 <br>
 
-<input id="submit-button" class="button" type="button" value="Submit" onclick="onSubmitClick()">
+<!-- <input id="submit-button" class="button" type="button" value="Submit" onclick="hello()"> -->
 
 <script>
-    alert("Hello World!");
 </script>
 
-<script src="code.js"></script>
+<script type="module" src="code.js"></script>
+
 
 </body>
 </html>
