designed html and organized code

--- a/index.html
+++ b/index.html
@@ -1,34 +1,84 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>My Site</title>
 
-    <!-- Responsive header -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+<!DOCTYPE html>
+<html>
+
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<title>Login</title>
+
+<style>
+body {font-family: Arial, Helvetica, sans-serif;}
+form {border: 3px solid #f1f1f1;}
+
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+button {
+  background-color: #04AA6D;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+}
+
+button:hover {
+  opacity: 0.8;
+}
+
+.imgcontainer {
+  text-align: center;
+  margin: 24px 0 12px 0;
+}
+
+img.avatar {
+  width: 40%;
+  max-width: 300px;
+  border-radius: 50%;
+}
+
+.container {
+  padding: 16px;
+}
+</style>
+
 </head>
+
 <body>
 
-<b>Please enter your credentials:</b>
+<h2>Login Form</h2>
 
 <form>
-  <label for="email">Email:</label>
-  <input type="text" id="email" name="email" value="aaa@aaa.com"><br><br>
-  <label for="password">Password:</label>
-  <input type="text" id="password" name="password" value="123456a"><br><br>
-  <input type="button" value="Login" onclick="verifyCredentials()">
+  <div class="imgcontainer">
+    <img src="login-img.png" class="avatar">
+  </div>
+
+  <div class="container">
+    <label for="email"><b>Email</b></label>
+    <input type="text" placeholder="Enter Email" name="email" id="email">
+    <label for="password"><b>Password</b></label>
+    <input type="password" placeholder="Enter Password" name="password" id="password">
+
+    <input type="button" value="Login" onclick="verifyCredentials()">
+
+  </div>
+
 </form>
 <br>
 <span id = "message" style="color:red"> </span>
 <br>
 
-<!-- <input id="submit-button" class="button" type="button" value="Submit" onclick="hello()"> -->
-
-<script>
-</script>
 
 <script type="module" src="code.js"></script>
 
-
 </body>
 </html>
+
